<resources>
    <string name="app_full_name">Healthy Way App</string>
    <string name="title_activity_login">Log in to Healthy Way Admin</string>
    <string name="prompt_email">enter email address</string>
    <string name="prompt_password">enter password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_create_new_account">CreateNewAccount</string>
    <string name="title_activity_client_view">ClientView</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_forgotten_password">ForgottenPassword</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="title_activity_settings_view">SettingsView</string>
    <string name="title_activity_loading_please_wait">LoadingPleaseWait</string>
    <string name="copyright_2018">copyright 2018</string>
    <string name="healthy_way_icon">Healthy Way Icon</string>
    <string name="login_spacer">-------- or ---------</string>
    <string name="create_new_account">Create New Account</string>
    <string name="press_to_create_new_account">press to create new account</string>
    <string name="sign_in">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="log_in_to_healthy_way_admin">Log in to Healthy Way Admin</string>
    <string name="submit">Submit</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_client_email_address">enter client email address</string>
    <string name="send_mail">send mail</string>
    <string name="journal_html">journal_html</string>
    <string name="weight_chart">weight chart</string>
    <string name="journal_details">Journal Details</string>
    <string name="weight_chart_goes_here">Weight Chart Goes Here</string>
    <string name="admin_account">Admin Account</string>
    <string name="sign_out">Sign out</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">confirm password</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="submit_text">Submit</string>
    <string name="forgotten_password">Forgotten Password</string>
    <string name="enter_your_account_email_address_you_ll_receive_an_email_with_instructions_to_reset_your_account_password_once_you_finish_the_reset_of_your_password_login_again">Enter your account email address. You\'ll receive an email with instructions to reset your account password. Once you finish the reset of your password, login again.</string>
    <string name="clear_search_text">clear search text</string>
    <string name="the_healthy_way_icon">The Healthy Way Icon</string>
    <string name="healthy_way_grocery_list">Healthy Way Grocery List</string>
    <string name="app_name">Bottom Navigation</string>
    <string name="title_journal">Journal</string>
    <string name="title_weight">Weight Chart</string>
    <string name="title_social">Social Media</string>
    <string name="title_grocery">Grocery List</string>
    <string name="title_daily">Daily Totals</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="journal_string">Journal</string>
    <string name="weight_graph_string">Weight Graph</string>
    <string name="social_media_string">Social Media</string>
    <string name="grocery_list_string">Grocery List</string>
    <string name="daily_totals_string">Daily Totals</string>
    <string name="my_string_admin_account">my @string/admin_account</string>
    <string name="my_account">My Account</string>
    <string name="daily_totals_header">daily totals header</string>
    <string name="daily_totals">Daily Totals</string>
    <string name="_12_0">12.0</string>
    <string name="enter_high_protein_limit">enter high protein limit</string>
    <string name="messages">messages</string>
    <string name="dash">-</string>
    <string name="enter_daily_protein_limit">enter daily protein limit</string>
    <string name="minimum_3_cups">(minimum 3 cups)</string>
    <string name="hw_header_icon">header</string>
    <string name="veggies">Veggies</string>
    <string name="copyright_2019_the_healthy_way">Copyright @ 2019 The Healthy Way</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="enter_daily_fat_limit">enter daily fat limit</string>
    <string name="enter_daily_starch_limit">enter daily starch limit</string>
    <string name="enter_daily_fruits_limit">enter daily fruits limit</string>
    <string name="_8_0">8.0</string>
    <string name="grid_header_fruits">Fruits</string>
    <string name="grid_header_starch">Starch</string>
    <string name="save_the_data">save the data</string>
    <string name="enter_default_zero">0.0</string>
    <string name="single_space" />
    <string name="grid_header_protein">Protein</string>
    <string name="label_decimal_zero">0.0</string>
    <string name="grid_header_fat">Fat</string>
    <string name="grid_header_veggies">Veggies</string>
    <string name="cancel_the_data">cancel the data</string>
    <string name="delete_data">delete data</string>
    <string name="weight">Weight</string>
    <string name="condensed_tab_journal">Log</string>
    <string name="condensed_tab_weight">Weight</string>
    <string name="condensed_tab_social">Social</string>
    <string name="condensed_tab_shop">List</string>
    <string name="condensed_tab_daily">Daily</string>
    <string name="stats_header">______Pr__Fat_St__Fr__Veg</string>
    <string name="stats_limits">Daily 0.0 0.0 0.0 0.0 0.0</string>
</resources>