<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity">



    <TextView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in_to_healthy_way_admin"
        android:textColor="@color/hw_purple"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_out_button"
        style="?android:textAppearanceSmall"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/hw_green"
        android:contentDescription="@string/press_to_create_new_account"
        android:text="@string/create_new_account"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/change_password_button"
        app:layout_constraintTop_toBottomOf="@+id/spacer" />

    <EditText
        android:id="@+id/client_old_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />


    <EditText
        android:id="@+id/client_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/prompt_password"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/client_old_password"
        app:layout_constraintStart_toStartOf="@+id/client_old_password"
        app:layout_constraintTop_toBottomOf="@+id/client_old_password" />


    <Button
        android:id="@+id/change_password_button"
        style="?android:textAppearanceSmall"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@color/hw_purple"
        android:text="@string/action_sign_in"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/client_new_password"
        app:layout_constraintStart_toStartOf="@+id/client_new_password"
        app:layout_constraintTop_toBottomOf="@+id/client_new_password" />

    <TextView
        android:id="@+id/spacer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/login_spacer"
        app:layout_constraintEnd_toEndOf="@+id/change_password_button"
        app:layout_constraintStart_toStartOf="@+id/change_password_button"
        app:layout_constraintTop_toBottomOf="@+id/change_password_button" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/hw_blue"
        android:text="@string/forgotten_password"


        android:textAllCaps="false"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/sign_out_button"
        app:layout_constraintStart_toStartOf="@+id/sign_out_button"
        app:layout_constraintTop_toBottomOf="@+id/sign_out_button" />

    <TextView
        android:id="@+id/copyrightText"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:textSize="8sp"
        tools:ignore="SmallSp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/client_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/copyrightText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel_button" />

</androidx.constraintlayout.widget.ConstraintLayout>